--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,8 +6,15 @@ theme:
 
 # Page tree
 nav:
-  - 1-Go 语言基础:
-    - 1.1Go 语言特性:
-      - 1.1.1Go 语言特性·第一课:
-        - 变量: 1/1.1/1.1.1/1.1.1.1.md
-        - 数组: 1/1.1/1.1.1/1.1.1.2.md
+  - Go 语言基础:
+    - 高可用微服务架构方法论: 1/1.md
+    - Go 语言特性:
+      - 为什么需要新的语言: 1/2/1.md
+      - Go 语言环境搭建: 1/2/2.md
+      - 控制结构: 1/1.md
+      - Go 语言常用数据结构: 1/1.md
+      - Go 语言函数调用: 1/1.md
+      - 常用语法: 1/1.md
+      - 多线程:
+        - 深入理解 channel: 1/1.md
+        - 基于 channel 编写一个生产者消费者程序: 1/1.md
