--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,8 @@ site_url: https://mkbooks.github.io/k8s-mengfanjie/
 
 theme:
   name: material
+  # icon:
+  #   logo: Kubernetes-Logo.wine.png
 
 # Page tree
 nav:
@@ -11,7 +13,7 @@ nav:
     - Go 语言特性:
       - 为什么需要新的语言: 1/2/1.md
       - Go 语言环境搭建: 1/2/2.md
-      - 控制结构: 1/1.md
+      - 控制结构: 1/2/3.md
       - Go 语言常用数据结构: 1/1.md
       - Go 语言函数调用: 1/1.md
       - 常用语法: 1/1.md
