--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,7 +15,7 @@ nav:
       - Go 语言环境搭建: 1/2/2.md
       - 控制结构: 1/2/3.md
       - Go 语言常用数据结构: 1/2/4.md
-      - Go 语言函数调用: 1/1.md
+      - Go 语言函数调用: 1/2/5.md
       - 常用语法: 1/1.md
       - 多线程:
         - 深入理解 channel: 1/1.md
