--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,7 +16,16 @@ nav:
       - 控制结构: 1/2/3.md
       - Go 语言常用数据结构: 1/2/4.md
       - Go 语言函数调用: 1/2/5.md
-      - 常用语法: 1/1.md
-      - 多线程:
+      - 常用语法: 1/2/6.md
+      - 多线程: 
         - 深入理解 channel: 1/1.md
         - 基于 channel 编写一个生产者消费者程序: 1/1.md
+    - Go 语言进阶:
+      - 线程加锁: 1/1.md
+      - 线程调度: 1/1.md
+      - 内存管理: 1/1.md
+      - 包引用与依赖管理: 1/1.md
+  - 云原生技术栈:
+    - Docker核心技术: 1/1.md
+  - 云原生项目实战:
+    - 微服务项目的开发和部署案例: 1/1.md
