--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,8 +18,9 @@ nav:
       - Go 语言函数调用: 1/2/5.md
       - 常用语法: 1/2/6.md
       - 多线程: 
-        - 深入理解 channel: 1/1.md
-        - 基于 channel 编写一个生产者消费者程序: 1/1.md
+        - 基础: 1/2/7.md
+        - 深入理解 channel: 1/2/8.md
+        - 基于 channel 编写一个生产者消费者程序: 1/2/9.md
     - Go 语言进阶:
       - 线程加锁: 1/1.md
       - 线程调度: 1/1.md
