--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,11 +22,16 @@ nav:
         - 深入理解 channel: 1/2/8.md
         - 基于 channel 编写一个生产者消费者程序: 1/2/9.md
     - Go 语言进阶:
-      - 线程加锁: 1/1.md
-      - 线程调度: 1/1.md
-      - 内存管理: 1/1.md
-      - 包引用与依赖管理: 1/1.md
+      - 线程加锁: 1/3/1.md
+      - 线程调度: 1/3/2.md
+      - 内存管理: 1/3/3.md
+      - 包引用与依赖管理: 1/3/4.md
+      - Makefile: 1/3/5.md
+      - 动手编写一个 HTTP Server: 1/3/6.md
+      - 调试: 1/3/7.md
+      - Kubernetes 中常用代码解读: 1/3/8.md
+      - Kubernetes 日常运维中的代码调试场景: 1/3/9.md
   - 云原生技术栈:
-    - Docker核心技术: 1/1.md
+    - Docker核心技术: 2/1.md
   - 云原生项目实战:
-    - 微服务项目的开发和部署案例: 1/1.md
+    - 微服务项目的开发和部署案例: 3/1.md
