--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,25 @@ nav:
       - Kubernetes 中常用代码解读: 1/3/8.md
       - Kubernetes 日常运维中的代码调试场景: 1/3/9.md
   - 云原生技术栈:
-    - Docker核心技术: 2/1.md
-  - 云原生项目实战:
-    - 微服务项目的开发和部署案例: 3/1.md
+    - Docker 核心技术: 
+      - 从系统架构谈起: 2/1/1.md
+      - 理解 Docker: 2/1/2.md
+      - Dockerfile 的最佳实践: 2/1/3.md
+    - Kubernetes 架构原则和对象设计: 
+      - 云计算: 2/2/1.md
+      - Kubernetes 架构基础: 2/2/2.md
+      - 了解 kubectl: 2/2/3.md
+      - 深入理解 Kubernetes: 2/2/4.md
+      - 核心对象概览: 2/2/5.md
+  #   - Kubernetes 控制平面组件 etcd: 2/1.md
+  #   - Kubernetes 控制平面组件 API Server: 2/1.md
+  #   - Kubernetes 控制平面组件 调度器和控制器: 2/1.md
+  #   - Kubernetes 控制平面组件 生命周期管理和服务发现: 2/1.md
+  #   - 生产化集群的管理: 2/1.md
+  #   - Kubernetes 的生产化运维: 2/1.md
+  #   - 将应用迁移到 Kubernetes 平台: 2/1.md
+  #   - 基于 Istio 的高级流量管理: 2/1.md
+  #   - Kubernetes 集群联邦和 Istio 多集群管理: 2/1.md
+  #   - 基于 Kubernetes 和 Istio 的安全保证: 2/1.md
+  # - 云原生项目实战:
+  #   - 微服务项目的开发和部署案例: 3/1.md
