--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,7 +43,7 @@ nav:
       - 深入理解 Kubernetes: 2/2/4.md
       - 核心对象概览: 2/2/5.md
       - 练习: 2/2/6.md
-  #   - Kubernetes 控制平面组件 etcd: 2/1.md
+    - Kubernetes 控制平面组件 etcd: 2/1.md
   #   - Kubernetes 控制平面组件 API Server: 2/1.md
   #   - Kubernetes 控制平面组件 调度器和控制器: 2/1.md
   #   - Kubernetes 控制平面组件 生命周期管理和服务发现: 2/1.md
