--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,7 +52,13 @@ nav:
       - 练习: 
         - etcd-ha-demo: 3/test/etcd-ha-demo/install-ha-etcd.md
         - test: 3/test/test.md
-    # - API Server:
+    - API Server:
+      - overview: 4.kube-api-server/0.overview.md
+      - 认证: 4.kube-api-server/1.认证.md
+      - 鉴权: 4.kube-api-server/2.鉴权.md
+      - 准入: 4.kube-api-server/3.准入.md
+      - 限流: 4.kube-api-server/4.限流.md
+      - 高可用APIServer: 4.kube-api-server/5.高可用APIServer.md
     # - 调度器和控制器:
     # - 生命周期管理和服务发现:
   #   - 生产化集群的管理: 2/1.md
