add: kube-api-server: 认证

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,6 +59,8 @@ nav:
       - 准入: 4.kube-api-server/3.准入.md
       - 限流: 4.kube-api-server/4.限流.md
       - 高可用APIServer: 4.kube-api-server/5.高可用APIServer.md
+      - 练习:
+        - 认证练习: 4.kube-api-server/test/1.认证练习.md
     # - 调度器和控制器:
     # - 生命周期管理和服务发现:
   #   - 生产化集群的管理: 2/1.md
